@@ -1,6 +1,7 @@
 cppthread (1.1.9.0~bionic) bionic; urgency=high
 
   * Updated the tests to support the new libexcept change.
+  * Moved the process::get_max_pid() to the cppthread library.
 
  -- Alexis Wilke <alexis@m2osw.com>  Sat, 28 Aug 2021 18:25:37 -0700
 
